# City_Portal

./: Cargo.toml  LICENSE  README.md  compose.yml
backend/: Cargo.toml
backend/src/: main.rs  models.rs
db/: init.sql
db/initdb/: init.sql
frontend/: package.json
frontend/src/lib/server/: backend.ts
frontend/src/routes/: +page.svelte
frontend/src/routes/datasets/: +page.server.ts  +page.svelte
services/gateway/: Cargo.toml
services/gateway/src/: lib.rs  resolvers.rs
src/: main.rs  models.rs  resolvers.rs  schema.rs
