[package]
name = "city_portal"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
async-graphql = "7"
async-graphql-axum = "7"
serde = "1"
serde_json = "1"
sqlx = { version = "0.8", features = [
    "runtime-tokio",
    "tls-rustls-aws-lc-rs",
    "postgres",
    "chrono",
    "json"
] }
chrono = "0.4"
dotenv = "0.15.0"
anyhow = "1.0"
